// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders expanded accordion 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 251, 254, 1)",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": true,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "rgba(103, 80, 164, 1)",
                  },
                  undefined,
                ],
              ]
            }
          >
            Accordion item 1
          </Text>
        </View>
        <View
          style={
            [
              {
                "marginVertical": 6,
                "paddingLeft": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅃
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="undefined-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          List item 1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list accordion with children 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 251, 254, 1)",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "alignSelf": "center",
                "marginLeft": 16,
                "marginRight": 0,
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰉋
          </Text>
        </View>
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  undefined,
                ],
              ]
            }
          >
            Expandable list item
          </Text>
        </View>
        <View
          style={
            [
              {
                "marginVertical": 6,
                "paddingLeft": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅀
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list accordion with custom title and description styles 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 251, 254, 1)",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  {
                    "color": "#f44336",
                  },
                ],
              ]
            }
          >
            Accordion item 1
          </Text>
          <Text
            numberOfLines={2}
            onTextLayout={[Function]}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  {
                    "color": "#f44336",
                  },
                ],
              ]
            }
          >
            Describes the expandable list item
          </Text>
        </View>
        <View
          style={
            [
              {
                "marginVertical": 6,
                "paddingLeft": 8,
              },
              {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅀
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list accordion with left items 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 251, 254, 1)",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "alignSelf": "center",
                "marginLeft": 16,
                "marginRight": 0,
                "marginVertical": 0,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰓎
          </Text>
        </View>
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  undefined,
                ],
              ]
            }
          >
            Accordion item 1
          </Text>
        </View>
        <View
          style={
            [
              {
                "marginVertical": 6,
                "paddingLeft": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅀
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders multiline list accordion 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "rgba(255, 251, 254, 1)",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  undefined,
                ],
              ]
            }
          >
            Expandable list item
          </Text>
          <Text
            numberOfLines={2}
            onTextLayout={[Function]}
            selectable={false}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontSize": 14,
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  undefined,
                ],
              ]
            }
          >
            Describes the expandable list item
          </Text>
        </View>
        <View
          style={
            [
              {
                "marginVertical": 6,
                "paddingLeft": 8,
              },
              {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅀
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
